--- a/client/src/components/Post.module.css
+++ b/client/src/components/Post.module.css
@@ -1,18 +1,21 @@
 .posted-property-not-show-details-container,.posted-property-show-details-container{
     width:100%;
-    background: rgb(235, 235, 235);
-    box-shadow: 0 0 4px 0 rgb(104, 104, 104);
+    background: rgb(220, 220, 220);
     display: flex;
     border-radius: 0 10px 10px 0;
     color:rgb(49, 49, 49);
     gap:1%;
     margin-bottom:0.5%;
+    border:1px solid grey;
 }
 
 .posted-property-show-details-container{
     display: grid;
     border-radius: 0 0 10px 10px;
     padding-bottom:3%;
+    margin-bottom:2%;
+    background:silver;
+    border:none;
 }
 
 
@@ -28,15 +31,21 @@
 }
 
 .post-interested-btn{
-    background:rgb(37, 168, 37);
+    background-color: #c2fbd7;
     letter-spacing: 0.5px;
     font-size: 14px;
     font-weight: bold;
-    color:white;
+    color:green;
     border-radius:5px;
-    box-shadow: 0px 0px 2px 1px rgb(133, 133, 133);
+    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
     padding:0 10px;
     height:40px;
+    border:1px solid green;
+}
+
+
+.post-interested-btn:hover{
+  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
 }
 
 .post-showless-btn,.post-delete-btn{
@@ -92,7 +101,7 @@
     font-weight: normal;
     font-size:12px;
     
-    color:rgb(95, 95, 95);
+    color:rgb(75, 75, 75);
 }
 
 
@@ -126,7 +135,7 @@
 }
 
 .is-liked{
-    color:red;
+    color:crimson;
 }
 
 
